--- a/tasks/initialize.yml
+++ b/tasks/initialize.yml
@@ -9,11 +9,14 @@
   command: grub2-mkconfig -o /boot/grub2/grub.cfg
   become: true
 
+- name: Install redhat-release GPG key
+  command: rpm --import RPM-GPG-KEY-redhat-release
+  become: true
+
 - name: Yum Update
   yum:
     name: '*'
     skip_broken: no
-    exclude: qpid-proton-c
     state: latest
   become: true
 
@@ -98,7 +101,7 @@
 #  become: true
 
 
-- name: STIG
+- name: Apply PCI-DSS SCAP Profile
   command: >
     /usr/local/bin/ansible-playbook -c local -i localhost,
     "{{ scaplocation.files[0].path }}/ansible/centos7-playbook-pci-dss.yml"
