reboot after update

--- a/tasks/initialize.yml
+++ b/tasks/initialize.yml
@@ -2,7 +2,7 @@
   replace:
     path: '/etc/default/grub'
     regexp: '^(GRUB_CMDLINE_LINUX=".*)"$'
-    replace: '\1 fips=1 boot=/dev/sda1"'
+    replace: '\1 fips=1 audit=1 boot=/dev/sda1"'
   become: true
 
 - name: Activate fips
@@ -28,6 +28,10 @@
 
 - name: Remove all old kernels after update
   command: "package-cleanup --oldkernels --count=1 -y"
+  become: true
+
+- name: Reboot
+  reboot:
   become: true
 
 - name: Download Compliance as Code
