--- a/vars/main.yml
+++ b/vars/main.yml
@@ -2,6 +2,6 @@
 
 tmp_dir: '/home/ec2-admin/tmp/'
 
-stig_url: "https://github.com/ComplianceAsCode/content/releases/download/v0.1.59/scap-security-guide-0.1.59.zip"
+stig_url: "https://nexus.voight.org:9443/repository/STIG/STIG/scapstig.zip"
 
 stig_skip: 'sudo_remove_nopasswd'
