--- a/vars/main.yml
+++ b/vars/main.yml
@@ -4,4 +4,4 @@ tmp_dir: '/home/ec2-admin/tmp/'
 
 stig_url: "https://nexus.voight.org:9443/repository/STIG/STIG/scapstig.zip"
 
-stig_skip: 'sudo_remove_nopasswd'
+stig_skip: 'banner_etc_issue,sudo_remove_nopasswd,sudo_remove_no_authenticate,sudo_require_authentication'
