removing sudo remove nopasswd rules to narrow down which rule is which.

--- a/tasks/initialize.yml
+++ b/tasks/initialize.yml
@@ -98,7 +98,7 @@
   become: true
 
 # For RedHat 7, change playbook to rhel7-playbook-stig.yml
-- name: Apply STIG Profile
+- name: Apply STIG Profile while skipping 'stig_skip'
   command: >
     /usr/local/bin/ansible-playbook -c local -i localhost,
     "/home/ec2-admin/archive/build/ansible/centos7-playbook-stig.yml"
